# glac

./: CMakeLists.txt  README.md  a.out  ctx.hpp  data.hpp  ex  ex2  experyment.cpp  glac.cppcheck  info.txt  mutex.hpp  scf.hpp  test.cpp
glac-cppcheck-build-dir/: files.txt  glac.a1  main.a1  main.s1
include/: glac.hpp  terminal.hpp
include/scf/: info.txt  scfLin.hpp  scfWin.hpp
include/sw/: swLin.hpp
ldl/: info.txt
src/: main.cpp
